--- a/gs-securing-web/src/main/resources/i18n/messages.properties
+++ b/gs-securing-web/src/main/resources/i18n/messages.properties
@@ -4,10 +4,11 @@ label.user.lastName=Last Name
 label.user.email=Email Address
 label.user.password=Password
 label.user.confirmPass=Confirm Password
-
 label.form.button.register=Register
 label.link.login=Login
-
 label.form.heading.login=Login
 label.form.button.login=Login
 label.link.register=Register
+label.heading.accessDenied=Access Denied!
+label.text.accessDenied=Oops! you are trying to access a protected resource
+label.link.here=here
