Added greeting view on user-login and added support for thymeleaf fragments

--- a/gs-securing-web/src/main/resources/i18n/messages.properties
+++ b/gs-securing-web/src/main/resources/i18n/messages.properties
@@ -12,3 +12,4 @@ label.link.register=Register
 label.heading.accessDenied=Access Denied!
 label.text.accessDenied=Oops! you are trying to access a protected resource
 label.link.here=here
+label.form.button.logout=SignOut
